remove deprecated usages of Class.newInstance()